--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-pdf": "^7.5.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
