--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.44.0",
+    "axios": "^1.6.2",
     "http-proxy-middleware": "^2.0.6",
     "pdfjs-dist": "^4.0.189",
     "react": "^18.2.0",
@@ -18,8 +19,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.10.0",
-    "web-vitals": "^2.1.4",
-    "axios": "^1.6.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
