--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "http-proxy-middleware": "^2.0.6",
     "pdfjs-dist": "^4.0.189",
     "react": "^18.2.0",
+    "react-animated-heart": "^0.0.8",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
